--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("http://i.imgur.com/OlpGCuh.png");
+  background: url("./bg.png");
   background-repeat: no-repeat;
   position: fixed;
   width: 100%;
@@ -9,7 +9,7 @@ body {
 }
 
 .game-box {
-  background: url("http://www.clker.com/cliparts/m/S/m/C/X/Q/black-square-rounded-corners.svg");
+  background: url("./black-box.svg");
   width: 1100px;
   height: 720px;
   margin: 0 auto;
