--- a/assets/style.css
+++ b/assets/style.css
@@ -31,12 +31,17 @@ body {
 
 .game-info {
   width: 300px;
-  height: 400px;
+  height: 545px;
   border: solid;
   border-color: black;
   border-radius: 10%;
   border-width: 20px;
   display: inline-block;
+}
+
+.score {
+  text-align: right;
+  padding-right: 38px;
 }
 
 .instructions {
